# ledger-autosync

./: .git-blame-ignore-revs  .gitignore  .hgignore  .travis.yml  CHANGELOG.md  CONTRIBUTING  MANIFEST.in  README.md  README.rst  fix_ofxid.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
examples/plugins/: aib.py  eq-bank.py  firstdirect.py  n26.py  revolut.py  wise.py
fixtures/: accented_characters_latin1.ofx  amazon.csv  amazon2.csv  apostrophe.ofx  checking-dynamic-account.lgr  checking-partial.lgr  checking-payee-match.ofx  checking.lgr  checking_order.ofx  comments.ofx  cusip.ofx  fidelity-one-dtsettle.ofx  fidelity.ofx  fidelity_fee.ofx  income.ofx  mint.csv  multiple.lgr  no-institution.ofx  ofxclient.ini  paypal.csv  paypal.lgr  paypal_alternate.csv  venmo.csv
ledgerautosync/: __init__.py  cli.py  converter.py  formatter.py  ledger.py  ledgerwrap.py  sync.py
tests/: __init__.py  conftest.py  test.py  test_cli.py  test_converter.py  test_formatter.py  test_ledger.py  test_ofx_formatter.py  test_sync.py  test_weird_ofx.py
